:recycle:  refactor: jwt 토큰 부분 리팩터링 #5

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -39,8 +39,10 @@ dependencies {
 
 	// spring-data-redis
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
-
+	//oauth2 설정
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+
+
 }
 
 tasks.named('test') {
