--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -10,9 +10,10 @@
 		"plugin:prettier/recommended"
 	],
 	"rules": {
-		"import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
-		"react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-		"no-unused-vars": 1,
-		"react/prop-types": 0
-	}
+        "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
+        "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+        "react/react-in-jsx-scope": "off",
+        "no-unused-vars": 1,
+        "react/prop-types": 0
+    }
 }
