📝 docs: react-in-jsx-scope 설정 추가 #19

--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -12,6 +12,7 @@
 	"rules": {
 		"import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
 		"react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+		"react/react-in-jsx-scope": "off",
 		"no-unused-vars": 1,
 		"react/prop-types": 0
 	}
