:sparkles: feat: 카카오 결제 api 결제 요청 클래스 추가, .yml debug 설정 추가. gradle 의존성 추가 # 30

--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -77,6 +77,8 @@ spring:
 
 logging:
   level:
+    org.apache.http: DEBUG
+    httpclient.wire: DEBUG
     org:
       springframework:
         orm:
