--- a/server/build.gradle
+++ b/server/build.gradle
@@ -43,6 +43,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 
 	implementation 'com.google.code.gson:gson:2.10'
+	//http클라이어트 디버깅
+	implementation 'org.apache.httpcomponents:httpclient:4.5.13'
 }
 
 
