:memo: docs: yml파일 quartz 설정 추가 #63

--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -1,4 +1,13 @@
 spring:
+  quartz:
+    scheduler-name: QuartzScheduler
+    properties:
+      org:
+        quartz:
+          threadPool:
+            threadCount: 5
+    job-store-type: memory
+
   redis:
     lettuce:
         pool:
