--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tosspayments/payment-sdk": "^1.2.3",
     "axios": "^1.2.0",
     "dayjs": "^1.11.6",
     "react": "^18.2.0",
