:bug: fix: jwt 예외 처리 수정 #5 #10

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -29,7 +29,7 @@ dependencies {
 	implementation 'org.mapstruct:mapstruct:1.5.3.Final'
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
 	runtimeOnly 'com.h2database:h2'
-
+	implementation 'mysql:mysql-connector-java'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	testImplementation 'org.springframework.security:spring-security-test'
 
