--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -45,12 +45,12 @@ spring:
           #            - email
           #            client-name: Naver
           #            authorization-grant-type: authorization_code
-          #            redirect-uri: http://localhost:8080/login/oauth2/code/naver
+          #            redirect-uri: http://localhost:9090/login/oauth2/code/naver
 
           kakao:
             client-id: 8bd02271846053cc63735a08226924b3
             client-secret: SMvvzV3I7vhxkPnlTybcS50D1YMyfnav
-            redirect-uri: http://ec2-43-201-37-71.ap-northeast-2.compute.amazonaws.com:8080/login/oauth2/code/kakao
+            redirect-uri:  http://ec2-43-201-37-71.ap-northeast-2.compute.amazonaws.com:8080/login/oauth2/code/kakao
             scope: #이거 때문에
               - profile_nickname
               - account_email
@@ -79,11 +79,18 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create
-    show-sql: true # SQL 출력
+      ddl-auto: update
+    show-sql: true
     properties:
       hibernate:
-        format_sql: true # SQL pretty print
+        format_sql: true
+    defer-datasource-initialization: true
+
+#
+#  datasource:
+#    url: jdbc:mysql://pillivery-db.c3eo37fghscz.ap-northeast-2.rds.amazonaws.com:3306/test?useSSL=false&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+#    username: admin
+#    password: pillivery33
 
 logging:
   level:
@@ -102,7 +109,7 @@ server:
 jwt:
   secret-key : sdfsdfsdfesdfdf11113456645454534545451
   # 민감한 정보는 시스템 환경 변수에서 로드한다.
-  access-token-expiration-minutes: 30
+  access-token-expiration-minutes: 120
   refresh-token-expiration-minutes: 420
 
 
