:bug: fix: optional chaining 에러 해결을 위한 eslintrc 설정 추가

--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -16,5 +16,8 @@
 		"no-unused-vars": 1,
 		"react/prop-types": 0,
 		"react/jsx-props-no-spreading": 0
+	},
+	"parserOptions": {
+		"ecmaVersion": 2020
 	}
 }
