--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "dayjs": "^1.11.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.39.4",
     "react-icons": "^4.6.0",
     "react-modal": "^3.16.1",
