--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.39.4",
     "react-icons": "^4.6.0",
+    "react-intersection-observer": "^9.4.1",
     "react-modal": "^3.16.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
