💚 chore: no-param-reassign off 설정

--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -22,7 +22,8 @@
 		"react/react-in-jsx-scope": 0,
 		"react/prop-types": 0,
 		"react/jsx-props-no-spreading": 0,
-		"@typescript-eslint/no-use-before-define": 0
+		"@typescript-eslint/no-use-before-define": 0,
+		"no-param-reassign": 0
 	},
 	"settings": {
 		"import/resolver": {
