--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -21,6 +21,7 @@
 		],
 		"react/react-in-jsx-scope": 0,
 		"react/prop-types": 0,
+		"react/require-default-props": "off",
 		"react/jsx-props-no-spreading": 0,
 		"@typescript-eslint/no-use-before-define": 0,
 		"no-param-reassign": 0
