--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -24,7 +24,8 @@
 		"react/require-default-props": "off",
 		"react/jsx-props-no-spreading": 0,
 		"@typescript-eslint/no-use-before-define": 0,
-		"no-param-reassign": 0
+		"no-param-reassign": 0,
+		"@typescript-eslint/no-empty-interface": 0
 	},
 	"settings": {
 		"import/resolver": {
