✨ feat: build:measure 스크립트 추가 #303

--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,7 @@
 	"scripts": {
 		"start": "craco start",
 		"build": "craco build",
+		"build:measure": "time npm run build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
 		"lint": "eslint ./src/**/*.{ts,tsx}",
